# partialinfo

./: .gitignore  README.md  best_gat_cora.pth  best_gat_cora_efficient.pth  best_gat_cora_torch_geometric.pth  best_model.pth  datasize_exp.slurm  density_exp.slurm  hiddensize_exp.slurm  main.py  nagents_exp.slurm  pyproject.toml  stepsize_exp0.slurm  stepsize_exp1.slurm  stepsize_exp2.slurm  stepsize_exp3.slurm
results/: run_20250618_121819_best_model.pt  run_20250618_122724_best_model.pt  run_20250618_122907_best_model.pt  run_20250618_123450_best_model.pt
runs/GAT_Cora_experiment/: events.out.tfevents.1749571341.soc-utah.28728.0  events.out.tfevents.1749571796.soc-utah.29997.0  events.out.tfevents.1749572163.soc-utah.31949.0  events.out.tfevents.1749573136.soc-utah.32737.0  events.out.tfevents.1749573180.soc-utah.32891.0  events.out.tfevents.1749573219.soc-utah.33006.0  events.out.tfevents.1749573253.soc-utah.33114.0  events.out.tfevents.1749573285.soc-utah.33223.0  events.out.tfevents.1749573329.soc-utah.33377.0  events.out.tfevents.1749573360.soc-utah.33483.0  events.out.tfevents.1749573390.soc-utah.33592.0  events.out.tfevents.1749573432.soc-utah.33744.0  events.out.tfevents.1749573448.soc-utah.33852.0  events.out.tfevents.1749573463.soc-utah.33954.0  events.out.tfevents.1749573479.soc-utah.34058.0  events.out.tfevents.1749573518.soc-utah.34174.0  events.out.tfevents.1749573633.soc-utah.34353.0  events.out.tfevents.1749573689.soc-utah.34611.0  (+10 more)
src/: BENCHMARKING.md  _main_sociotemporal.py  _old_main_sociotemporal.py  benchmark_models.py  cli_config.py  datagen.py  datagen_temporal.py  datasize_experiment.py  density_experiment.py  dotGAT.py  dotGAT_optimized.py  dotgat_lrmc_agents.py  hiddensize_experiment.py  main_lrmc.py  main_lrmc_agents.py  main_lrmc_temporal.py  main_sociotemporal.py  main_temporal.py  nagents_experiment.py  plot_utils.py  profile_model.py  profile_models.py  stepsize_exp.slurm  stepsize_experiment.py  test_inference.py  test_optimizations.py  test_sensing.py
(+40 files in other folders)
