[project]
name = "partialinfo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.2.3",
    "scipy>=1.13.1",
    "tensorboard>=2.19.0",
    "torch>=2.8.0.dev20250610",
    "torch-geometric>=2.6.1",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/nightly/cpu"
