[project]
name = "partialinfo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.9.0",
    "networkx>=3.2.1",
    "pandas>=2.2.3",
    "pytest>=8.4.0",
    "pytest-cov>=6.2.1",
    "scipy>=1.13.1",
    "tensorboard>=2.19.0",
    "torch>=2.7.1",
    "torch-geometric>=2.6.1",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu128"

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/nightly/cpu"
