[project]
name = "partialinfo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "geomloss>=0.2.6",
    "gprof2dot>=2025.4.14",
    "graphviz>=0.21",
    "ipykernel>=6.30.1",
    "matplotlib>=3.9.0",
    "networkx>=3.2.1",
    "pandas>=2.2.3",
    "psutil>=6.0.0",
    "pykeops>=2.3",
    "pytest>=8.4.0",
    "pytest-cov>=6.2.1",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "tensorboard>=2.19.0",
    "torch>=2.7.1",
    "torch-geometric>=2.6.1",
]

[[tool.uv.index]]
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/nightly/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "torch-cuda", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
  { index = "torch-cpu",  marker = "sys_platform == 'darwin' or (sys_platform == 'linux' and platform_machine == 'aarch64')" },
]
